Add testing launch surface, spectre launch CLI, and guide docs (#208 P3/P4)
- LaunchAndAttachExtension / LaunchAndAttachRule compose with JUnit lifecycle
- spectre launch -- <command> with --once, -C, --app-name
- Guide updates: junit.md, cli.md, troubleshooting.md (launch harness section)